File browser metadata toggle

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -699,6 +699,16 @@
                                             </ul>
                                         </form>
                                     </div>
+                                    <div id="fb-metadata-helper">
+                                        <i class="fa fa-caret-square-o-right fb-metadata-collapse" aria-hidden="true"
+                                           data-action="hide"
+                                           data-toggle="tooltip" data-placement="left" title="Hide"></i>
+                                        <i class="fa fa-caret-square-o-left fb-metadata-collapse hidden" aria-hidden="true"
+                                           data-action="show"
+                                           data-toggle="tooltip" data-placement="left" title="Show"></i>
+
+                                        <span class="ui-icon ui-icon-grip-dotted-vertical"></span>
+                                    </div>
                                     <div id="fb-metadata" class="fb-metadata h-100">
                                         {% if cm.resource_type == "CompositeResource" %}
                                             <div id="fileTypeMetaDataTab">
