--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -44,7 +44,7 @@
     </table>
 </div>
 <div class="col-xs-6">
-    <table class="info-table">
+    <table id="table-stats" class="info-table">
         <tr>
             <td><img src="{{ STATIC_URL }}img/public.png" alt="Public Resource"/></td>
             <td><strong>Sharing Status:&nbsp;&nbsp;</strong>Public</td>
