--- a/theme/templates/resource-landing-page/resource-header.html
+++ b/theme/templates/resource-landing-page/resource-header.html
@@ -1,7 +1,7 @@
 {% load hydroshare_tags %}
 
 {% if not metadata_form %}
-<div class="col-xs-6">
+<div class="col-sm-12 col-md-6">
     <table class="info-table">
         <tr><th>Authors:</th><td id="authors">
             {% for cr in creators %}
@@ -41,14 +41,58 @@
         <tr><th>Resource type:</th><td>{{ cm|resource_type }}</td></tr>
         <tr><th>Created:</th><td>{{ cm.created|date:"M d, Y" }} at {{ cm.created|time }}</td></tr>
         <tr><th>Last updated:</th><td> {{ cm.updated|date:"M d, Y" }} at {{ cm.updated|time }} by {% if cm.last_changed_by %}{{ cm.last_changed_by|contact }}{% endif %}</td></tr>
+        <tr>
+            <th>Content types:</th>
+            <td>
+                <span class="label label-default">Time Series</span>&nbsp;
+                <span class="label label-default">Geographic Feature</span>&nbsp;
+            </td>
+        </tr>
     </table>
 </div>
-<div class="col-xs-6">
+<div class="col-sm-12 col-md-6">
     <table id="table-stats" class="info-table">
         <tr>
-            <td><img src="{{ STATIC_URL }}img/public.png" alt="Public Resource"/></td>
-            <td><strong>Sharing Status:&nbsp;&nbsp;</strong>Public</td>
+            {% if cm.raccess.published %}
+                <td><img src="{{ STATIC_URL }}img/published.png" alt="Published Resource"/></td>
+                <td>Published</td>
+            {% elif cm.raccess.public %}
+                <td><img src="{{ STATIC_URL }}img/public.png" alt="Public Resource"/></td>
+                <td>Public</td>
+            {% elif cm.raccess.discoverable %}
+                <td><img src="{{ STATIC_URL }}img/discoverable.png" alt="Discoverable Resource"/></td>
+                <td>Discoverable</td>
+            {% else %}
+                <td><img src="{{ STATIC_URL }}img/private.png" alt="Private Resource"/></td>
+                <td>Private</td>
+            {% endif %}
         </tr>
+        {% if cm.raccess.published %}
+            {% if "pending" in cm.doi or "failure" in cm.doi %}
+                <tr>
+                    <td><img src="{{ STATIC_URL }}img/pending.png" alt=""/></td>
+                    <td>Pending publication</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <span class="small text-muted">
+                            Note that the DOI will not be available until it has been registered and activated.
+                        </span>
+                    </td>
+                </tr>
+            {% endif %}
+        {% else %}
+            <tr>
+                {% if cm.raccess.shareable %}
+                    <td><img src="{{ STATIC_URL }}img/shareable.png" alt="Sharable Resource"/></td>
+                    <td>Shareable</td>
+                {% else %}
+                    <td><img src="{{ STATIC_URL }}img/non-shareable.png" alt="Non Sharable Resource"/></td>
+                    <td>Not Shareable</td>
+                {% endif %}
+            </tr>
+        {% endif %}
         <tr>
             <td class="text-center"><i class="fa fa-eye" aria-hidden="true"></i></td>
             <td><strong>Views:&nbsp;&nbsp;</strong>1,835</td>
