--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -301,7 +301,7 @@
                                                             <strong>ABSTRACT: </strong>{{ res.metadata.description|linebreaks }}
                                                         </p>
                                                     </div>
-                                                    <div class="show-more-btn btn-default" title="Show abstract">···</div>
+                                                    <div class="show-more-btn toggle-abstract btn-default" title="Show abstract">···</div>
                                                 {% endif %}
                                             </div>
                                             {% endif %}
@@ -765,7 +765,7 @@
                                                         <strong>ABSTRACT: </strong>{{ res.metadata.description|linebreaks }}
                                                     </p>
                                                 </div>
-                                                <div class="show-more-btn btn-default" title="Show more">···</div>
+                                                <div class="show-more-btn toggle-abstract btn-default" title="Show more">···</div>
                                             {% endif %}
 
                                         </div>
