--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -135,7 +135,7 @@
                                                 <p class="description"><strong>ABSTRACT: </strong>
                                                 </p> {{ res.metadata.description|linebreaks }}
                                             </div>
-                                            <div class="show-more-btn btn-default" title="Show less">···</div>
+                                            <div class="show-more-btn toggle-abstract btn-default" title="Show less">···</div>
                                         {% endif %}
                                     </div>
                             {% endfor %}
