--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -356,7 +356,7 @@
                                                 </tr>
                                                 <tr>
                                                     <td><span class="text-muted">User since: </span></td>
-                                                    <td>{{ profile_user.date_joined }}</td>
+                                                    <td>{{ profile_user.date_joined|date:"M d, Y" }}</td>
                                                 </tr>
                                                 </tbody>
                                             </table>
