--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -2038,9 +2038,9 @@
             <div class="profile-badge-header">
                 <div class="profile-pic round-image user-icon"></div>
                 <div class="external-profiles">
-                    <i class="identifier-icon ai ai-google-scholar-square"></i>
+                    <i data-googlescholarid class="identifier-icon ai ai-google-scholar-square"></i>
                     <i class="identifier-icon ai ai-orcid"></i>
-                    <i class="identifier-icon ai ai-researchgate-square"></i>
+                    <i data-researchgateid class="identifier-icon ai ai-researchgate-square"></i>
                     <img class="identifier-icon"
                          src="{{ STATIC_URL }}img/researcherID.png"
                          alt="ResearcherID icon"/>
@@ -2080,7 +2080,7 @@
                             data-title></span>
                     </h4>
                     <div class="text-muted">Subject Areas:</div>
-                    <div data-subject-areas></div>
+                    <div data-subjectAreas></div>
                 </div>
 
                 <hr>
