--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -89,7 +89,7 @@
                             <a id="new-version" data-toggle="modal" data-target="#new-version-resource-dialog">
                                 <span data-toggle="tooltip" data-placement="bottom"
                                       title="Create a new version of this resource"
-                                      class="fa fa-clone icon-button icon-blue"></span>
+                                      class="fa fa-code-fork icon-button icon-blue"></span>
                             </a>
                         {% endif %}
                     </form>
